fixed spacing issues

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -141,7 +141,10 @@ a:link, a:visited {
     transform: scale(0.94);
     animation: scale 3s forwards cubic-bezier(0.5, 1, 0.89, 1);
     }
-
+.hoff {
+  box-shadow: var(--shadow-box) ;
+  
+}
 .mtn{
     margin-left: 20px;
     margin-right: 20px;
@@ -365,15 +368,13 @@ footer {
     .long{
         height: 220px !important;
     }
-    /* .center-link{
-        margin-left: 1%;
-    } */
+  
 }
-@media screen and (max-width: 1200px) {
-    /* .center-link{
-        margin-left: 1%;
-    } */
-}
+/* @media screen and (max-width: 1200px) {
+   .about-me {
+    width: 75%;
+   }
+} */
 
 @media screen and (max-width:990px) {
     .mern{
